# jarvis-prep-assistant

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  _load_env.py  _make_env.py  backend_main.py  docker-compose.yml  packages.txt  pyproject.toml  requirements.txt  start.bat
.github/workflows/: ci.yml
.streamlit/: config.toml  secrets.toml.example
app/: Home.py
app/pages/: 1_智能Prep.py  2_模拟训练.py  3_知识库.py
config/: industries.yaml
data/cases/: education_data_leak.yaml  finance_compliance.yaml  finance_data_leak.yaml  government_compliance.yaml  healthcare_data_leak.yaml  healthcare_ransomware.yaml  manufacturing_apt.yaml  manufacturing_ransomware.yaml  retail_data_leak.yaml  retail_ransomware.yaml
data/dict/: industry_keywords.yaml
data/eval/: chatgpt_baseline.yaml  evaluation_report.md
data/methodologies/: case_citation_four.yaml  challenger_sale.yaml  four_dimensional_inquiry.yaml  product_combination.yaml  pyramid_response.yaml  scenario_inquiry.yaml  spin_selling.yaml  web_security_presales.yaml
data/products/: bastion_host.yaml  dlp_data.yaml  edr_endpoint.yaml  log_audit.yaml  mss_managed.yaml  siem_soc.yaml  vuln_scanner.yaml  waf_web.yaml  zero_trust.yaml
data/sensitivities/: education_sens.yaml  finance_sens.yaml  government_sens.yaml  healthcare_sens.yaml  manufacturing_sens.yaml  retail_sens.yaml
docs/: ARCHITECTURE.md  PRD-UI-Redesign.md
frontend/: jarvis-ui-prototype.html
prototypes/prep_flow/: NOTES.md  README.md  logic.py  main.py
scripts/: build_index.py  evaluate.py  validate_data.py
src/jarvis/: __init__.py  auth.py  config.py  industry_config.py  paths.py
src/jarvis/engine/: __init__.py  hybrid_engine.py  intent.py  llm_engine.py  rule_engine.py  training.py
src/jarvis/ui/: icons.py  (+2 more)
src/jarvis_app/: __init__.py
tests/: conftest.py
tests/test_engine/: test_intent.py  test_llm_engine.py  test_rule_engine.py
tests/test_generators/: test_ppt_outline.py  test_ppt_outline_ac.py
tests/test_intelligence/: test_threat_feed.py  test_threat_feed_api.py
tests/test_knowledge/: test_cases.py  test_loader.py  test_meth_sens.py  test_validation.py
tests/test_models/: test_models.py
tests/test_search/: test_semantic_search.py
(+24 files in other folders)
