[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis"
version = "0.1.0"
description = "JARVIS - AI-powered Sales Preparation Assistant"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Gothbo"},
]
dependencies = [
    "pydantic>=2.0,<3.0",
    "pyyaml>=6.0",
    "streamlit>=1.30",
    "openai>=1.0",
    "jieba>=0.42",
    "httpx>=0.25",
    "plotly>=5.18",
    "python-dotenv>=1.0",
    "fastapi>=0.104",
    "uvicorn>=0.24",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
search = [
    "chromadb>=0.4",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.3",
    "chromadb>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["N801"]

[tool.ruff.lint.isort]
known-first-party = ["jarvis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
